# pac4cli

./: .gitignore  .gitmodules  .travis.yml  CNAME  Cargo.toml  Makefile  README.md  _config.yml  main.py  pac4cli.config  pac4cli.py  pac4cli.service  pac4cli.sh  proxy.py  requirements-check.txt  requirements.txt  servicemanager.py  setup.py  testrun.sh  trigger-pac4cli  uninstall.sh  wpad.py
.cargo/: config
.circleci/: config.yml
_posts/: 2018-09-29-welcome-to-jekyll.markdown
archlinux/: Dockerfile  PKGBUILD  inspect-arch-package.sh  pac4cli.install
debian/: README.Debian  changelog  control  copyright  postinst  postrm  prerm  rules
launchd/: agent.pac4cli.plist  daemon.pac4cli.plist  pac4cli.plist
pac4cli/: __main__.py  pac4cli.py  servicemanager.py  wpad.py
src/: connection.rs  main.rs  networkmanager-stub.rs  networkmanager.rs  options.rs  pacparser.rs  proxy.rs  ringbuffer.rs  systemd.rs  wpad.rs
src/proxy/: connection.rs  mod.rs  protocol.rs
test/: fake-proxy-1-response  fake-proxy-2-response  runtests.py  serve_once.py  test-arch-package.sh
