[package]
name = "pac4cli"
version = "0.1.0"
authors = ["Timo Kluck <tkluck@infty.nl>"]
edition = '2018'

[dependencies]
async-trait = "0.1.36"
tokio = {"version"= "0.2", features=["macros", "io-util", "signal"]}
libc = "0.2.0"
futures = "0.1.17"
uri = "0.3.0"
dbus = "0.8"
dbus-tokio = "0.5"
hyper = "0.13"
reqwest = "0.10"
slog = "2.5"
slog-scope = "4.0.1"
slog-term = "2.3.0"
slog-journald = "2.0.0"
structopt = "0.3"
systemd = "0.4"
tokio-signal = "0.1.5"
rust-ini = "0.10"
